modifié :         ubuntu_17.04/dist.conf

--- a/ubuntu_17.04/dist.conf
+++ b/ubuntu_17.04/dist.conf
@@ -17,9 +17,12 @@ echo "[ifupdown]"
 echo "managed=false"
 } > /etc/NetworkManager/NetworkManager.conf
 
+if [ $(ls -l /etc/resolv.conf | grep -c /var/run/NetworkManager/resolv.conf ) -le 0 ];then
 rm /etc/resolv.conf
-
+ln -s /var/run/NetworkManager/resolv.conf /etc/resolv.conf
+fi
 systemctl restart network-manager
+
 
 fi
 
