modifié :         ubuntu17.04/dist.conf

--- a/ubuntu17.04/dist.conf
+++ b/ubuntu17.04/dist.conf
@@ -1,6 +1,6 @@
 IPTABLESsave="service netfilter-persistent save" 	# debian testing sid
 ENE2GUARDIAN="systemctl enable e2guardian"			# debian sid
-
+UIDMINUSER=500	
 ## désactivation systemd-resolved
 
 if [ "$( cat < /etc/NetworkManager/NetworkManager.conf | grep -c "dns=default" )" -le 0 ] ; then
