modifié :         CTparental 	modifié :         mageia/dist.conf

--- a/mageia/dist.conf
+++ b/mageia/dist.conf
@@ -5,7 +5,7 @@ DEPENDANCES=" dnsmasq lighttpd lighttpd-mod_auth lighttpd-mod_magnet perl sudo w
 
 #UIDMINUSER=500											# mageia 3/4
 UIDMINUSER=1000											# mageia 5/6
-
+COMMONFILEGS=${COMMONFILEGS:="system-auth"}
 ##################################################
 ########## services gérés par systemd ############
 CRONstart="systemctl start crond "				# mageia 3/4/5/6 , fedora 19/20
