modifié :         CTparental 	modifié :         debian/changelog 	modifié :         debian/control 	nouveau fichier : locale/es_ES/LC_MESSAGES/ctparental.mo 	nouveau fichier : locale/es_ES/LC_MESSAGES/ctparental.po

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,6 @@ Conflicts: dansguardian,firewalld
 Description: Controle parental.
  Filtrage web basé sur dnsmasq, lighttpd et cron,
  une gestion des horaires de connection est aussi intégrée et
- une interface web (http://127.0.0.11/CTadmin) permettant de paramétrer tous ça.
+ une interface web (http://admin.ct.localhost) permettant de paramétrer tous ça.
  Le couple login mot de passe doit être saisi à l'install, mais peut être
  modifié par la suite grâce à la commande CTparental.sh -uhtml.
