modifié :         make-deb.txt 	nouveau fichier : ubuntu14.04/config 	nouveau fichier : ubuntu14.04/control 	modifié :         ubuntu14.04/dist.conf 	nouveau fichier : ubuntu14.04/postinst 	nouveau fichier : ubuntu14.04/postrm 	nouveau fichier : ubuntu14.04/prerm

--- a/ubuntu14.04/dist.conf
+++ b/ubuntu14.04/dist.conf
@@ -1,12 +1,16 @@
 IPTABLESsave="service iptables-persistent save" 	# ubuntu 14.04
 
+PING4="ping"
+PING6="ping6"
+
 ## le service networking semle planter au redémarage dans ubuntu 14.04 on utilise ifdown ifup.
-{
+networkinglo () {
 echo "ifdown lo:1"
 echo "ifdown lo:2"
 echo "ifup lo:1" 
 echo "ifup lo:2"
-} > /usr/local/bin/networkinglo
-chmod 755 /usr/local/bin/networkinglo
-NETWORKINGrestart='/usr/local/bin/networkinglo' 
-#TIMERALERT=10   
+sleep 2
+} 
+
+NETWORKINGrestart='networkinglo' 
+#TIMERALERT=10 
