modified:   mageia/dist.conf

--- a/mageia/dist.conf
+++ b/mageia/dist.conf
@@ -20,7 +20,17 @@ DNSMASQrestart="systemctl restart dnsmasq "		# mageia 3/4/5/6 , fedora 19/20
 NWMANAGERstop="systemctl stop NetworkManager "		# mageia 3/4/5/6 , fedora 19/20
 NWMANAGERstart="systemctl start NetworkManager "	# mageia 3/4/5/6 , fedora 19/20
 NWMANAGERrestart="systemctl restart NetworkManager "	# mageia 3/4/5/6 , fedora 19/20
-NETWORKINGrestart="systemctl restart network "	# mageia 3/4/5/6 , fedora 19/20
+
+networkinglo () {
+ifdown lo:1
+ifdown lo:2
+ifup lo:1 
+ifup lo:2
+sleep 2
+} 
+
+NETWORKINGrestart='networkinglo' 
+
 IPTABLESsave="iptables-save"			# mageia 3/4/5/6 # Red Had , # fedora 19/20
 IPTABLESsaveFILE="/etc/sysconfig/iptables" # mageia 3/4/5/6
 ##################################################
