modifié :         mageia/ctparental.spec 	modifié :         mageia/dist.conf

--- a/mageia/dist.conf
+++ b/mageia/dist.conf
@@ -52,6 +52,7 @@ PROXYuser="daemon" # mageia 3/4/5/6
 CADIR="/etc/pki/tls/rootcerts"
 PEMSRVDIR="/etc/pki/tls/private"
 REPCAMOZ="/etc/pki/tls/mozilla/"
+UPDATECASYSTEM=""
 DOMAINEDEPOTS="$( urpmq --list-url | grep mageia | cut -d":" -f2 | cut -d "/" -f3 | sort -u )"
 #DIRE2GLANG="/usr/share/dansguardian/languages/" #mageia 5
 CMDINSTALL="urpmi -a --auto "
