modifié :         debian/CTparental.conf

--- a/debian/CTparental.conf
+++ b/debian/CTparental.conf
@@ -1,5 +1,5 @@
 LASTUPDATE=0
-#LANG=fr_FR.utf8
+#LANG=fr_FR.UTF-8
 DNSMASQ=BLACK
 AUTOUPDATE=OFF
 HOURSCONNECT=OFF
@@ -9,13 +9,13 @@ REDIRECT=ON
 # Parfeux minimal.
 IPRULES=OFF
 MD5DREAB=
-I_WAN_IPV4= 
-I_WAN_IPV6= 
-IP_BOX_IPV4= 
-IP_BOX_IPV6= 
-IP_IWAN_IPV4= 
+I_WAN_IPV4=
+I_WAN_IPV6=
+IP_BOX_IPV4=
+IP_BOX_IPV6=
+IP_IWAN_IPV4=
 IP_IWAN_IPV6=
-DNS1v4= 
-DNS2v4= 
-DNS1v6= 
-DNS2v6=  
+DNS1v4=
+DNS2v4=
+DNS1v6=
+DNS2v6=
