modifié :         README.md 	modifié :         README.us 	modifié :         debian/CTparental.conf

--- a/debian/CTparental.conf
+++ b/debian/CTparental.conf
@@ -1,5 +1,20 @@
 LASTUPDATE=0
 #LANG=fr_FR.UTF-8
+
+## currently 3 languages are supported, English, French and Spanish.
+## by default the application takes the default language of the local system or if not supported english but we can
+## force with one of the following values provided you have it
+## activate in the local system example under Debian via the "dpkg-reconfigure locales" command.
+## possible values for LANG
+## es_AR.UTF-8, es_BO.UTF-8, es_CL.UTF-8, es_CO.UTF-8
+## es_CR.UTF-8, es_CU.UTF-8, es_DO.UTF-8, es_EC.UTF-8
+## es_ES.UTF-8, es_GT.UTF-8, es_HN.UTF-8, es_MX.UTF-8
+## es_NI.UTF-8, es_PA.UTF-8, es_PE.UTF-8, es_PR.UTF-8
+## es_PY.UTF-8, es_SV.UTF-8, es_US.UTF-8, es_UY.UTF-8
+## es_VE.UTF-8, en_BE.UTF-8, fr_CA.UTF-8, fr_CH.UTF-8
+## en_EN.UTF-8, en_LU.UTF-8
+## taking into account in the web interface requires to restart the service lighttpd
+
 DNSMASQ=BLACK
 AUTOUPDATE=OFF
 HOURSCONNECT=OFF
