--- a/debian/control
+++ b/debian/control
@@ -8,12 +8,12 @@ Homepage: https://github.com/marsat/CTparental.git
 Vcs-Browser: https://github.com/marsat/CTparental.git
 Vcs-Git: https://github.com/marsat/CTparental.git
 Build-Depends: debhelper (>=9.2)
-Standards-Version:4.21.01
+Standards-Version:4.21.03
 
 Package: ctparental
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends},debconf,dnsmasq,lighttpd,lighttpd-mod-magnet,perl,sudo,wget,php-cgi,php-xml,libnotify-bin,notification-daemon,iptables-persistent,rsyslog,e2guardian,privoxy,openssl,libnss3-tools,console-data,dnsutils,ifupdown2|ifupdown
+Depends: ${misc:Depends},debconf,dnsmasq,lighttpd,lighttpd-mod-magnet,perl,sudo,wget,php-cgi,php-xml,libnotify-bin,notification-daemon,iptables-persistent,rsyslog,e2guardian,privoxy,openssl,libnss3-tools,console-data,dnsutils,rsyslog,ifupdown2|ifupdown
 Conflicts: dansguardian,firewalld
 Description: Controle parental.
  Filtrage web basé sur dnsmasq, lighttpd et cron,
