--- a/debian/CTparental.conf
+++ b/debian/CTparental.conf
@@ -11,8 +11,8 @@ LASTUPDATE=0
 ## es_ES.UTF-8, es_GT.UTF-8, es_HN.UTF-8, es_MX.UTF-8
 ## es_NI.UTF-8, es_PA.UTF-8, es_PE.UTF-8, es_PR.UTF-8
 ## es_PY.UTF-8, es_SV.UTF-8, es_US.UTF-8, es_UY.UTF-8
-## es_VE.UTF-8, fr_BE.UTF-8, fr_CA.UTF-8, fr_CH.UTF-8
-## fr_FR.UTF-8, fr_LU.UTF-8
+## es_VE.UTF-8, en_BE.UTF-8, fr_CA.UTF-8, fr_CH.UTF-8
+## en_EN.UTF-8, en_LU.UTF-8
 ## taking into account in the web interface requires to restart the service lighttpd
 
 DNSMASQ=BLACK
