modifié :         ubuntu17.04/dist.conf

--- a/ubuntu17.04/dist.conf
+++ b/ubuntu17.04/dist.conf
@@ -2,28 +2,28 @@ IPTABLESsave="service netfilter-persistent save" 	# debian testing sid
 ENE2GUARDIAN="systemctl enable e2guardian"			# debian sid
 ## désactivation systemd-resolved
 
-if [ "$( cat < /etc/NetworkManager/NetworkManager.conf | grep -c "dns=default" )" -le 0 ] ; then
+# if [ "$( cat < /etc/NetworkManager/NetworkManager.conf | grep -c "dns=default" )" -le 0 ] ; then
 
-systemctl disable systemd-resolved
-systemctl stop systemd-resolved
-systemctl restart systemd-networkd
+# systemctl disable systemd-resolved
+# systemctl stop systemd-resolved
+# systemctl restart systemd-networkd
 
-{
-echo "[main]"
-echo "plugins=ifupdown,keyfile"
-echo "dns=default"
-echo "[ifupdown]"
-echo "managed=false"
-} > /etc/NetworkManager/NetworkManager.conf
+# {
+# echo "[main]"
+# echo "plugins=ifupdown,keyfile"
+# echo "dns=default"
+# echo "[ifupdown]"
+# echo "managed=false"
+# } > /etc/NetworkManager/NetworkManager.conf
 
-if [ $(ls -l /etc/resolv.conf | grep -c /var/run/NetworkManager/resolv.conf ) -le 0 ];then
-rm /etc/resolv.conf
-ln -s /var/run/NetworkManager/resolv.conf /etc/resolv.conf
-fi
-systemctl restart network-manager
+# if [ $(ls -l /etc/resolv.conf | grep -c /var/run/NetworkManager/resolv.conf ) -le 0 ];then
+# rm /etc/resolv.conf
+# ln -s /var/run/NetworkManager/resolv.conf /etc/resolv.conf
+# fi
+# systemctl restart network-manager
 
 
-fi
+# fi
 
 
 #TIMERALERT=10  
