modifié :         mageia/ctparental.spec 	modifié :         mageia/dist.conf

--- a/mageia/dist.conf
+++ b/mageia/dist.conf
@@ -21,6 +21,11 @@ NWMANAGERstop="systemctl stop NetworkManager "		# mageia 3/4/5/6 , fedora 19/20
 NWMANAGERstart="systemctl start NetworkManager "	# mageia 3/4/5/6 , fedora 19/20
 NWMANAGERrestart="systemctl restart NetworkManager "	# mageia 3/4/5/6 , fedora 19/20
 RSYSLOGRESTART="systemctl restart rsyslog "	# mageia 3/4/5/6 , fedora 19/20
+SSHstart="systemctl start sshd "
+SSHstop="systemctl stop sshd "
+SSHrestart="systemctl restart sshd "
+ENABLESSH="systemctl enable sshd "
+DISABLESSH="systemctl disable sshd "
 
 networkinglo () {
 ifdown lo:1
