--- a/ubuntu14.04/control
+++ b/ubuntu14.04/control
@@ -8,11 +8,11 @@ Homepage: https://github.com/marsat/CTparental.git
 Vcs-Browser: https://github.com/marsat/CTparental.git
 Vcs-Git: https://github.com/marsat/CTparental.git
 Build-Depends: debhelper (>=9.2)
-Standards-Version:4.21.06
+Standards-Version:4.22.01
 
 Package: ctparental
 Architecture: all
-Depends: dnsmasq,lighttpd,lighttpd-mod-magnet,perl,sudo,wget,php5-cgi,libnotify-bin,notification-daemon,iptables-persistent,rsyslog,dansguardian,privoxy,openssl,libnss3-tools,console-data,dnsutils,rsyslog
+Depends: dnsmasq,lighttpd,lighttpd-mod-magnet,perl,sudo,wget,php5-cgi,libnotify-bin,notification-daemon,iptables-persistent,rsyslog,dansguardian,privoxy,openssl,libnss3-tools,console-data,dnsutils,rsyslog,rsync,openssh-server
 Conflicts: e2guardian,firewalld
 Description: Controle parental.
  Filtrage web basé sur dnsmasq, lighttpd et cron,
